--- a/akhabar.html
+++ b/akhabar.html
@@ -26,7 +26,51 @@
 
 
 
+
+
+
+
+
+<article class="news-article">
+            <h2 class="news-title">बिहार बोर्ड मैट्रिक परीक्षा 2026: इन स्कूलों का एडमिट कार्ड फंसा, देखें पेंडिंग स्कूलों की पूरी लिस्ट (PDF)
+</h2>
+            <div class="news-img-box">
+                <img src="sen.jpg.jpeg" alt="News Photo">
+
+                <a href="sen.pdf"
+                target="_blank"
+                style="background-color: #d32f2f; color: aliceblue; padding: 5px 15px; text-decoration: none;
+                border-radius: 4px; font-weight: bold;">पूरी लिस्ट देखें
+              </a>
+
+            </div>
+            <p class="news-desc">बिहार विद्यालय परीक्षा समिति (BSEB) ने उन स्कूलों की सूची जारी की है जिन्होंने अभी तक सेंट-अप परीक्षा का 
+डेटा बोर्ड को नहीं भेजा है। इन स्कूलों के छात्रों का एडमिट कार्ड जारी होने में समस्या हो सकती है। छात्र नीचे दिए गए 
+लिंक से लिस्ट डाउनलोड करके अपने स्कूल का नाम चेक कर सकते हैं।
+</p>
+
+
+                <button 
+onclick="shareNews('हेडलाइन ',
+'खबर',window.location.href)"
+class="share-btn">
+        <i class="false
+        fa-share-alt"></i>शेयर करें 
+        <button style="margin-right: 10px;">
+</button>
+
+
+
+        </article>
+
+
         
+
+
+
+
+
+
 
         <article class="news-article">
             <h2 class="news-title">​📰 न्यूज़ हेडलाइन (Headline):
