--- a/akhabar.html
+++ b/akhabar.html
@@ -35,7 +35,8 @@
             <h2 class="news-title">बिहार बोर्ड मैट्रिक परीक्षा 2026: इन स्कूलों का एडमिट कार्ड फंसा, देखें पेंडिंग स्कूलों की पूरी लिस्ट (PDF)
 </h2>
             <div class="news-img-box">
-                <img src="mmm.png" alt="News Photo">
+                <img src="mmm.png" 
+                style="width: 200px; height: 100px; margin: 10px; border-radius: 10px;" alt="News Photo">
 
                 <a href="sen.pdf"
                 target="_blank"
