--- a/index.html
+++ b/index.html
@@ -54,21 +54,41 @@ content="width=device-width,initial-scale=1.0">
 
 
 
-<div>
-<nav class="aa">
-     <ul>
-        <li><a href="#">Youtube</a></li>
-         <li><a href="#">Facebook</a></li>
-          <li><a href="#">Instagram</a></li>
-           <li><a href="#">About</a></li>
-            <li><a href="#">#</a></li>
-             <li><a href="#">#</a></li>
-            <li><a href="#">#</a></li>
-            <li><a href="#">#</a></li>
-</ul>
 
-</nav>
+
+
+
+
+
+
+<div style="text-align: center; margin-top: 20px; padding: 15px; background: #f9f9f9; border-top: 2px solid #ddd;">
+    <p style="font-weight: bold; font-family: sans-serif; margin-bottom: 10px;">हमसे जुड़ें (Latest Updates के लिए):</p>
+    
+    <a href="https://chat.whatsapp.com/BCMK1Pgeqeb3Ygu11nNVjX" target="_blank" style="display: inline-block;
+     background: #25D366; color: white; padding: 10px 15px; margin: 5px; border-radius: 5px; text-decoration: none; 
+     font-family: sans-serif; font-weight: bold;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" width="18" style="vertical-align: middle; 
+        margin-right: 5px;"> WhatsApp
+    </a>
+
+    <a href="https://www.youtube.com/@MANJITSAWASI999" target="_blank" style="display: inline-block; background: #FF0000; 
+    color: white; padding: 10px 15px; margin: 5px; border-radius: 5px; text-decoration: none; font-family: sans-serif; 
+    font-weight: bold;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" width="18"
+         style="vertical-align: middle; margin-right: 5px;"> YouTube
+    </a>
+
+    <a href="https://www.facebook.com/share/1M3imN3wPs/" target="_blank" style="display: inline-block; background: #1877F2; 
+    color: white; padding: 10px 15px; margin: 5px; border-radius: 5px; text-decoration: none; font-family: sans-serif; 
+    font-weight: bold;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" width="18"
+         style="vertical-align: middle; margin-right: 5px;"> Facebook
+    </a>
 </div>
+
+
+
+
 
 
 
