--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@ content="width=device-width,initial-scale=1.0">
         <title>MANJIT SAWASI (मंजीत सवासी )</title>
 
 
-<meta name="description" content="manjit sawasi poterl: बिहार बोर्ड की ताजा खबरें, online गेम्स और टेक्नॉलजी Etc.">
-<meta name="Keyboard" content="manjitsawasi, bihar board update, BSEB News, Bihar Board Ruselt 2026, manjit sawasi game, hindi news
-manjit sawasi tech, gaming free, Editing">
-<meta name="author" content="(MANJIT SAWASI)">
-<meta property="og:title" content="MANJIT SAWASI bihar board update"> 
-<meta property="og:description" content="मॉडल पेपर dawnload, letest अपडेट, Editing Material फ्री">
 
+        <meta name="description" content="Manjit Sawasi Portal: बिहार बोर्ड की ताज़ा खबरें, ऑनलाइन गेम्स, टेक्नोलॉजी और फ्री एडिटिंग मटेरियल।">
+<meta name="keywords" content="manjitsawasi, bihar board update, BSEB News, Bihar Board Result 2026, gaming, editing material free">
+<meta name="author" content="MANJIT SAWASI">
+<meta property="og:title" content="MANJIT SAWASI | Bihar Board Update & Games">
+<meta property="og:description" content="मॉडल पेपर download, latest अपडेट और फ्री एडिटिंग मटेरियल यहाँ पायें।">
 
 
 
@@ -134,7 +133,7 @@ manjit sawasi tech, gaming free, Editing">
 
                    
 <button onclick="shareNews('हेडलाइन ',
-'खबर',window.location.href)"
+'खबर','https://manjitsawasi.online/')"
 class="share-btn">
         <i class="false
         fa-share-alt"></i>शेयर करें</button>
