--- a/akhabar.html
+++ b/akhabar.html
@@ -51,7 +51,7 @@
 
                 
 <button onclick="shareNews('हेडलाइन ',
-'खबर',window.location.href)"
+'खबर','https://manjitsawasi.online/')"
 class="share-btn">
         <i class="false
         fa-share-alt"></i>शेयर करें</button>
@@ -89,7 +89,7 @@ class="share-btn">
 
                 <button 
 onclick="shareNews('हेडलाइन ',
-'खबर',window.location.href)"
+'खबर','https://manjitsawasi.online/')"
 class="share-btn">
         <i class="false
         fa-share-alt"></i>शेयर करें 
