--- a/akhabar/index.html
+++ b/akhabar/index.html
@@ -10,7 +10,7 @@
 
 
 <div style="text-align: center; margin-top: 30px;">
-            <a href="index.html" class="home-btn">← मुख्य पेज पर वापस जाएं</a>
+            <a href="/" class="home-btn">← मुख्य पेज पर वापस जाएं</a>
         </div>
 
 
