--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ content="width=device-width,initial-scale=1.0">
     <nav class="mmm">
      <ul>
         <li><a href="index.html">Home</a></li>
-         <li><a href="akhabar.html">News</a></li>
+         <li><a href="/akhabar/">News</a></li>
           <li><a href="ent.html">Video</a></li>
            <li><a href="mainpage.html">Games</a></li>
            
