--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ content="width=device-width,initial-scale=1.0">
         <li><a href="index.html">Home</a></li>
          <li><a href="/akhbar/">News</a></li>
           <li><a href="ent.html">Video</a></li>
-           <li><a href="/game/">Games</a></li>
+           <li><a href="/game/index.html">Games</a></li>
            
             <li><a href="go.html">Login</a></li>
 </ul>
