--- a/index.html
+++ b/index.html
@@ -113,12 +113,17 @@ content="width=device-width,initial-scale=1.0">
             
            
             </div>
-            <p class="news-desc">बिहार विद्यालय परीक्षा समिति (BSEB) के अध्यक्ष आनंद किशोर जी के निर्देशानुसार,
-             वार्षिक माध्यमिक परीक्षा 2026 का फाइनल एडमिट कार्ड आधिकारिक वेबसाइट पर अपलोड कर दिया गया है।
- बोर्ड द्वारा जारी की गई आधिकारिक विज्ञप्ति के अनुसार, राज्य के सभी मान्यता प्राप्त स्कूलों के प्रधानाध्यापक अपनी यूजर आईडी
+            <p class="news-desc">बिहार विद्यालय परीक्षा समिति (BSEB) के 
+                अध्यक्ष आनंद किशोर जी के निर्देशानुसार,
+             वार्षिक माध्यमिक परीक्षा 2026 का फाइनल एडमिट कार्ड
+              आधिकारिक वेबसाइट पर अपलोड कर दिया गया है।
+ बोर्ड द्वारा जारी की गई आधिकारिक विज्ञप्ति के अनुसार, राज्य के 
+ सभी मान्यता प्राप्त स्कूलों के प्रधानाध्यापक अपनी यूजर आईडी
  और पासवर्ड का उपयोग करके छात्रों का एडमिट कार्ड डाउनलोड कर सकते हैं।
-​छात्रों को सूचित किया जाता है कि उनकी प्रायोगिक परीक्षा (Practical Exam) 20 जनवरी से 22 जनवरी 2026 तक आयोजित होगी, 
-जबकि सैद्धांतिक परीक्षा (Theory Exam) 17 फरवरी से 25 फरवरी 2026 तक चलेगी। एडमिट कार्ड केवल उन्हीं छात्रों का मान्य होगा 
+​छात्रों को सूचित किया जाता है कि उनकी प्रायोगिक परीक्षा
+ (Practical Exam) 20 जनवरी से 22 जनवरी 2026 तक आयोजित होगी, 
+जबकि सैद्धांतिक परीक्षा (Theory Exam) 17 फरवरी से 25
+ फरवरी 2026 तक चलेगी। एडमिट कार्ड केवल उन्हीं छात्रों का मान्य होगा 
 जो अपनी 'सेंट-अप' (Sent-up) परीक्षा में पास हुए हैं।</p>
 
 
