--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="hi">
     <head>
 
 <meta name="google-site-verification" content="mgq782XhMba5Qz3L64CDz4_TzYjFyjH2r5IKImcafOU" />
