--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ content="width=device-width,initial-scale=1.0">
 
 
         <title>MANJIT SAWASI (मंजीत सवासी )</title>
-
+            <link rel="icon" href="images/logo.jpeg" type="image/jpeg">
 
 
         <meta name="description" content="Manjit Sawasi Portal: बिहार बोर्ड की ताज़ा खबरें, ऑनलाइन गेम्स, टेक्नोलॉजी और फ्री एडिटिंग मटेरियल।">
