--- a/akhbar/index.html
+++ b/akhbar/index.html
@@ -33,11 +33,11 @@
 
 
 
-
-        <h1>बिहार बोर्ड 12th फाइनल एडमिट कार्ड 16\01\2026 से जारी:जल्दी प्राप्त करें</h1>
+<P><b>तारीख: 18 जनवरी 2026 ताजा अपडेट</b></P>
+        <h1>बिहार बोर्ड 12th फाइनल एडमिट कार्ड 16\01\2026 से जारी: जल्दी प्राप्त करें</h1>
 
 <p align="center">
-    <img src="patna.png" alt="Bihar Board 12th Admit Card 2026" width="50%">
+    <img src="patna.png" alt="Bihar Board 12th Admit Card 2026" width="60%">
 </p>
 
 <p>
@@ -49,7 +49,7 @@
 
 <p>
     आधिकारिक वेबसाइट पर जाने के लिए: 
-    <a href="https://seniorsecondary.biharboardonline.com" target="_blank">यहाँ क्लिक करें</a>
+    <a href="https://intermediate.biharboardonline.com/" target="_blank">यहाँ क्लिक करें</a>
 </p>
 
 <p>धन्यवाद,<br><b>Manjitsawasi.online</b></p>
