--- a/ent.html
+++ b/ent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manjit Sawasi999 Video</title>
+    <title>MANJIT SAWASI (मंजीत सवासी) Video</title>
     <link rel="stylesheet" href="ent.css">
 </head>
 <body>
@@ -11,10 +11,10 @@
       <h1 class="section-title">Manjit Sawasi shorts</h1>
     <div class="shorts-grid">
         <div class="short-card"><iframe src="https://www.youtube.com/embed/peE4in7xzJs" frameborder="0" allowfullscreen></iframe></div>
-        <div class="short-card"><iframe src="https://www.youtube.com/embed/peE4in7xzJs" frameborder="0" allowfullscreen></iframe></div>
-        <div class="short-card"><iframe src="https://www.youtube.com/embed/peE4in7xzJs" frameborder="0" allowfullscreen></iframe></div>
-        <div class="short-card"><iframe src="https://www.youtube.com/embed/peE4in7xzJs" frameborder="0" allowfullscreen></iframe></div>
-        <div class="short-card"><iframe src="https://www.youtube.com/embed/peE4in7xzJs" frameborder="0" allowfullscreen></iframe></div>
+        <div class="short-card"><iframe src="https://www.youtube.com/embed/XcAewf1cEzM" frameborder="0" allowfullscreen></iframe></div>
+        <div class="short-card"><iframe src="https://www.youtube.com/embed/ITrCa9TeP9c" frameborder="0" allowfullscreen></iframe></div>
+        <div class="short-card"><iframe src="https://www.youtube.com/embed/0jy9cgplCFM" frameborder="0" allowfullscreen></iframe></div>
+        <div class="short-card"><iframe src="https://www.youtube.com/embed/VmxAyjm9mjc" frameborder="0" allowfullscreen></iframe></div>
          <div class="short-card">
         <iframe src="https://www.youtube.com/embed/peE4in7xzJs" frameborder="0" allowfullscreen></iframe>
     </div>
@@ -45,6 +45,22 @@
         <h3>Video Title 3</h3>
     </div>
 
+
+    <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/VmxAyjm9mjc" frameborder="0" allowfullscreen></iframe>
+        <h3>Video Title 3</h3>
+    </div>
+
+    <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/ITrCa9TeP9c" frameborder="0" allowfullscreen></iframe>
+        <h3>Video Title 3</h3>
+    </div>
+
+
+    <div class="video-box">
+        <iframe src="https://www.youtube.com/embed/VmxAyjm9mjc" frameborder="0" allowfullscreen></iframe>
+        <h3>Video Title 3</h3>
+    </div>
 </div>
 
 
