--- a/Das.html
+++ b/Das.html
@@ -12,7 +12,7 @@
         .header-mini {
             background: #2c3e50;
             color: white;
-            padding: 15px;
+            padding: 25px;
             border-radius: 12px;
             text-align: center;
             margin-bottom: 15px;
@@ -22,8 +22,8 @@
         /* Compact Grid - Ek line mein do chhote buttons */
         .compact-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
+          border: 10px;
+            gap: 20px;
             margin-bottom: 20px;
         }
 
@@ -38,7 +38,7 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
-            font-size: 14px;
+            font-size: 24px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
@@ -69,7 +69,7 @@
 
     <div class="compact-grid">
         <a href="So.html" class="mini-card s-soc">🌍 स. विज्ञान</a>
-        <a href="study.html" class="mini-card s-sci">🔬 विज्ञान</a>
+        <a href="Study.html" class="mini-card s-sci">🔬 विज्ञान</a>
         <a href="math.html" class="mini-card s-mat">📐 गणित</a>
         <a href="hindi.html" class="mini-card s-hin">✍️ हिंदी</a>
         <a href="english.html" class="mini-card s-eng">🔤 English</a>
