--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ content="width=device-width,initial-scale=1.0">
 <meta property="og:title" content="MANJIT SAWASI | Bihar Board Update & Games">
 <meta property="og:description" content="मॉडल पेपर download, latest अपडेट और फ्री एडिटिंग मटेरियल यहाँ पायें।">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
         
