--- a/Das.html
+++ b/Das.html
@@ -70,7 +70,7 @@
     <div class="compact-grid">
         <a href="So.html" class="mini-card s-soc">🌍 स. विज्ञान</a>
         <a href="Study.html" class="mini-card s-sci">🔬 विज्ञान</a>
-        <a href="math.html" class="mini-card s-mat">📐 गणित</a>
+        <a href="Math.html" class="mini-card s-mat">📐 गणित</a>
         <a href="hindi.html" class="mini-card s-hin">✍️ हिंदी</a>
         <a href="english.html" class="mini-card s-eng">🔤 English</a>
         <a href="pdf_notes.html" class="mini-card s-pdf">📚 PDF नोट्स</a>
