--- a/Math.html
+++ b/Math.html
@@ -95,13 +95,14 @@
     <p>Manjit dost: Sirf Math Objective</p>
 </div>
 
-<div class="btn"
-<a href class="Math.html">Page-1</a></div>
-<div class="btn"
-<a href class="Math2.html">Page-2</a></div>
-<div class="btn"
-<a href class="Math3.html">Page-3</a></div>
+<ul>
+<a href class="Math.html">Page-1</a>
 
+<a href class="Math2.html">Page-2</a>
+
+<a href class="Math3.html">Page-3</a>
+ </ul>
+ 
 
 
 <div class="quiz-container">
