--- a/Math.html
+++ b/Math.html
@@ -95,13 +95,13 @@
     <p>Manjit dost: Sirf Math Objective</p>
 </div>
 
-<ul>
-<a href class="Math.html">Page-1</a>
+<nav class="nav-bar">
+<a href="Math.html">Page-1</a>
 
-<a href class="Math2.html">Page-2</a>
+<a href="Math2.html">Page-2</a>
 
-<a href class="Math3.html">Page-3</a>
- </ul>
+<a href="Math3.html">Page-3</a>
+ </nav>
  
 
 
