--- a/index.html
+++ b/index.html
@@ -91,15 +91,17 @@
 
 /* 3. मुख्य हेडिंग (Heading) */
 h1 {
-    color: #ff0073;
+    color: #1f1f4e;
     font-size: 24px;
-    padding: 35px 10px;
+    padding: 15px auto;
     text-align: center;
-    background-color: #04d783;
+    background-color: #2c3e50;
     width: 100vw;
+    margin: 0;
+    margin-top: 0px;
     line-height: 1.5;
-    margin-top: 80px;
-    display: flex;
+    margin-top: 30px;
+    
     justify-content: center;
     border-radius: 20%;
 }
