--- a/index.html
+++ b/index.html
@@ -439,6 +439,45 @@ p {
         0%, 100% { transform: translateY(0); }
         50% { transform: translateY(-5px); }
     }
+    
+    .sambhavit-btn {
+    display: block;
+    width: 70%; /* बड़ा बटन */
+    max-width: 200px;
+    margin: 30px auto;
+    padding: 20px;
+    background: linear-gradient(135deg, #FF416C 0%, #B64 50%); /* लाल-नारंगी ग्रेडिएंट */
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0 10px 20px rgba(255, 75, 43, 0.4);
+    transition: all 0.4s ease;
+    position: relative;
+    overflow: hidden;
+    animation: pulse 2s infinite; /* चमकने वाला एनीमेशन */
+}
+
+/* बटन चमकने का एनीमेशन */
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.03); box-shadow: 0 15px 30px rgba(255, 75, 43, 0.6); }
+    100% { transform: scale(1); }
+}
+
+.sambhavit-btn:hover {
+    background: linear-gradient(135deg, #FF4B2B 0%, #FF416C 100%);
+    letter-spacing: 2px;
+}
+
+.sambhavit-btn i {
+    margin-right: 10px;
+}
+
 </style>
 
 
@@ -478,11 +517,21 @@ p {
 </div>
 
 <div>
-  
+  <button class="sambhavit-btn" onclick="startQuiz()">
+    🚀 2 फरवरी संभावित 12th प्रश्न (2026)
+</button>
+
 </div>
 
 
+<script>
+  function startQuiz() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "2feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
 
+</script>
 
 
 
