--- a/2feb.html
+++ b/2feb.html
@@ -30,6 +30,17 @@
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="250" height="250" viewBox="0 0 250 250"><text x="50%" y="50%" text-anchor="middle" fill="rgba(255, 193, 7, 0.15)" font-size="24" font-family="Verdana, sans-serif" font-weight="bold" transform="rotate(-40, 125, 125)">Manjitsawasi</text></svg>');
     }
 }
+@media print {
+    body {
+        /* यह लाइन सबसे ज़रूरी है */
+        -webkit-print-color-adjust: exact !important;
+        print-color-adjust: exact !important;
+        
+        /* वॉटरमार्क का कोड */
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="250" height="250" viewBox="0 0 250 250"><text x="50%" y="50%" text-anchor="middle" fill="rgba(0, 0, 0, 0.1)" font-size="25" font-family="Arial" font-weight="bold" transform="rotate(-45, 125, 125)">Manjitsawasi</text></svg>') !important;
+        background-repeat: repeat !important;
+    }
+}
 
         
     </style>
