--- a/2feb.html
+++ b/2feb.html
@@ -41,11 +41,40 @@
         background-repeat: repeat !important;
     }
 }
+/* 1. वॉटरमार्क को सबसे ऊपर लाने के लिए */
+.print-watermark {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+    font-size: 60px;
+    color: rgba(0, 0, 0, 0.08) !important; /* हल्का सा गाढ़ा किया है ताकि दिखे */
+    font-weight: bold;
+    z-index: 9999 !important; /* इसे कार्ड्स के ऊपर लाएगा */
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+/* 2. कार्ड्स के पीछे से वॉटरमार्क दिखने के लिए */
+.question-box, .card, [class*="box"] { 
+    background-color: rgba(255, 255, 255, 0.7) !important; /* कार्ड को थोड़ा पारदर्शी बनाया */
+    position: relative;
+    z-index: 1;
+}
+
+/* 3. प्रिंट के समय का फिक्स */
+@media print {
+    .print-watermark {
+        display: block !important;
+        -webkit-print-color-adjust: exact !important;
+    }
+}
 
         
     </style>
 </head>
 <body>
+<div class="print-watermark">Manjitsawasi  </div>
 
 <div class="navbar">दंगल 🎯</div>
 
