--- a/index.html
+++ b/index.html
@@ -445,21 +445,21 @@ p {
     width: 70%; /* बड़ा बटन */
     max-width: 200px;
     margin: 30px auto;
-    padding: 20px;
+    padding: 10px;
     background: linear-gradient(135deg, #FF416C 0%, #B64 50%); /* लाल-नारंगी ग्रेडिएंट */
     color: white;
     text-align: center;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
     text-transform: uppercase;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
     cursor: pointer;
     box-shadow: 0 10px 20px rgba(255, 75, 43, 0.4);
-    transition: all 0.4s ease;
+    transition: all 0.5s ease;
     position: relative;
     overflow: hidden;
-    animation: pulse 2s infinite; /* चमकने वाला एनीमेशन */
+    animation: pulse 4s infinite; /* चमकने वाला एनीमेशन */
 }
 
 /* बटन चमकने का एनीमेशन */
@@ -477,6 +477,44 @@ p {
 .sambhavit-btn i {
     margin-right: 10px;
 }
+
+
+
+    .sambhavi-btn {
+    display: block;
+    width: 70%; /* बड़ा बटन */
+    max-width: 200px;
+    margin: 30px auto;
+    padding: 15px;
+    background: linear-gradient(135deg, #FF4C 0%, #f09    50%); /* लाल-नारंगी ग्रेडिएंट */
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0 10px 20px rgba(255, 75, 43, 0.4);
+    transition: all 0.4s ease;
+    position: relative;
+    overflow: hidden;
+    animation: puls 2s infinite; /* चमकने वाला एनीमेशन */
+}
+
+/* बटन चमकने का एनीमेशन */
+@keyframes puls {
+    0% { transform: scale(1); }
+    30% { transform: scale(1.03); box-shadow: 0 15px 30px rgba(255, 75, 43, 0.6); }
+    100% { transform: scale(1); }
+}
+
+.sambhavi-btn:hover {
+    background: linear-gradient(135deg ##1d0abb, #FF416C 100%);
+    letter-spacing: 2px;
+}
+
+
 
 </style>
 
@@ -515,7 +553,8 @@ p {
 
     </nav>
 </div>
-
+<div class="inter-ex">
+  <h2>12th Science Exam 2026</h2>
 <div>
   <button class="sambhavit-btn" onclick="startQuiz()">
     🚀 2 फरवरी संभावित 12th प्रश्न (2026)
@@ -524,6 +563,59 @@ p {
 </div>
 
 
+<div>
+  <button class="sambhavi-btn" onclick="startQuizi()">
+    🚀 3 फरवरी Math संभावित 12th प्रश्न (2026)
+</button>
+
+</div>
+
+
+<div>
+  <button class="sambhavit-btn" onclick="startQuize()">
+    🚀 4 फरवरी संभावित 12th प्रश्न (2026)
+</button>
+
+</div>
+
+
+<div>
+  <button class="sambhavit-btn" onclick="startQuiz1()">
+    🚀 5 फरवरी संभावित 12th प्रश्न (2026)
+</button>
+
+</div>
+
+
+<div>
+  <button class="sambhavit-btn" onclick="startQuiz2()">
+    🚀 6 फरवरी संभावित 12th प्रश्न (2026)
+</button>
+
+</div>
+
+<div>
+  <button class="sambhavit-btn" onclick="startQuiz3()">
+    🚀 7 फरवरी संभावित 12th प्रश्न (2026)
+</button>
+
+</div>
+
+
+<div>
+  <button class="sambhavit-btn" onclick="startQuiz4()">
+    🚀 9 फरवरी संभावित 12th प्रश्न (2026)
+</button>
+
+</div>
+
+<div>
+  <button class="sambhavit-btn" onclick="startQuiz5()">
+    🚀 10 फरवरी संभावित 12th प्रश्न (2026)
+</button>
+
+</div>
+</div>
 <script>
   function startQuiz() {
     // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
@@ -535,9 +627,68 @@ p {
 
 
 
+<script>
+  function startQuizi() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "3feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
+
+</script>
+
+<script>
+  function startQuize() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "4feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
+
+</script>
+
+<script>
+  function startQuiz1() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "5feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
+
+</script>
+<script>
+  function startQuiz2() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "6feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
+
+</script>
+
+<script>
+  function startQuiz3() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "7feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
+
+</script>
 
 
+<script>
+  function startQuiz4() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "9feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
 
+</script>
+
+<script>
+  function startQuiz5() {
+    // यहाँ आप अपने क्विज़ वाले पेज का लिंक दे सकते हैं या नीचे स्क्रॉल करा सकते हैं
+    window.location.href = "10feb.html"; 
+    // या अगर आपको फुल स्क्रीन करना है तो पुराना वाला function यहाँ डाल दें
+}
+
+</script>
 
 
 <div style="text-align: center; margin-top: 20px; padding: 15px; background: #f9f9f9; border-top: 2px solid #ddd;">
