--- a/index.html
+++ b/index.html
@@ -553,6 +553,79 @@ p {
 
     </nav>
 </div>
+
+
+<style>
+    .btn-wrapper {
+        text-align: center;
+        margin: 25px 0;
+    }
+
+    .bio-btn {
+        background: linear-gradient(135deg, #004, #00cec9); /* Greenish Light Color */
+        color: white;
+        padding: 18px 35px;
+        font-size: 22px;
+        font-weight: bold;
+        border: none;
+        border-radius: 12px;
+        cursor: pointer;
+        text-decoration: none;
+        display: inline-flex;
+        align-items: center;
+        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
+        position: relative;
+    }
+
+    .bio-btn:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    /* CHAMA KTA HUA NEW OPTION */
+    .new-badge {
+        background-color: red; /* Reddish Pin */
+        color: white;
+        font-size: 12px;
+        padding: 2px 8px;
+        border-radius: 4px;
+        margin-left: 10px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        animation: flash 1s infinite alternate;
+        border: 1px solid white;
+    }
+
+    @keyframes flash {
+        from { opacity: 1; transform: scale(1); }
+        to { opacity: 0.5; transform: scale(1.1); }
+    }
+
+    .live-dot {
+        height: 10px;
+        width: 10px;
+        background-color: #ff0000;
+        border-radius: 100%;
+        display: inline-block;
+        margin-right: 10px;
+        box-shadow: 0 0 8px #ff0000;
+    }
+</style>
+
+<div class="btn-wrapper">
+    <a href="2fe.html" class="bio-btn">
+        <span class="live-dot"></span>
+        02 FEB 2026: Biology Live Answer Key
+        <span class="new-badge">NEW</span>
+    </a>
+</div>
+
+
+
+
+
+
 <div class="inter-ex">
   <h2>12th Science Exam 2026</h2>
 <div>
