--- a/4fe.html
+++ b/4fe.html
@@ -832,20 +832,185 @@
     </div>
 
     <div class="q-block">
+        <span class="q-text">83. \(\int e^x (\cot x + \log \sin x) dx = \)</span>
+        <span class="q-eng">83. \(\int e^x (\cot x + \log \sin x) dx = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(e^x \cot x + C\)</div><div class="opt-item">(B) \(e^x \log \sin x + C\)</div>
+            <div class="opt-item">(C) \(e^x \sin x + C\)</div><div class="opt-item">(D) \(e^x \cos x + C\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (B)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">84. \(\int \frac{dx}{\sqrt{x}} = \)</span>
+        <span class="q-eng">84. \(\int \frac{dx}{\sqrt{x}} = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(\sqrt{x} + C\)</div><div class="opt-item">(B) \(2\sqrt{x} + C\)</div>
+            <div class="opt-item">(C) \(\frac{1}{2}\sqrt{x} + C\)</div><div class="opt-item">(D) \(2x\sqrt{x} + C\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (B)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">85. यदि \(A = \{1, 2\}\), तो इस समुच्चय पर कितनी द्विआधारी संक्रियाएँ परिभाषित हो सकती हैं?</span>
+        <span class="q-eng">85. If \(A = \{1, 2\}\), how many binary operations can be defined on this set?</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) 2</div><div class="opt-item">(B) 8</div>
+            <div class="opt-item">(C) 16</div><div class="opt-item">(D) 4</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (C)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">86. यदि \(f(x) = 3x - 4\), तो \(f^{-1}(x) = \)</span>
+        <span class="q-eng">86. If \(f(x) = 3x - 4\), then \(f^{-1}(x) = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(\frac{x+4}{3}\)</div><div class="opt-item">(B) \(\frac{x-4}{3}\)</div>
+            <div class="opt-item">(C) \(3x+4\)</div><div class="opt-item">(D) \(\frac{x}{3}+4\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">87. \(P(A \cup B) = \)</span>
+        <span class="q-eng">87. \(P(A \cup B) = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(P(A) + P(B) - P(A \cap B)\)</div><div class="opt-item">(B) \(P(A) + P(B) + P(A \cap B)\)</div>
+            <div class="opt-item">(C) \(P(A) - P(B)\)</div><div class="opt-item">(D) \(P(A) \cdot P(B)\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">88. यदि \(A\) और \(B\) स्वतंत्र घटनाएँ हों, तो \(P(A \cap B) = \)</span>
+        <span class="q-eng">88. If \(A\) and \(B\) are independent events, then \(P(A \cap B) = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(P(A) + P(B)\)</div><div class="opt-item">(B) \(P(A) - P(B)\)</div>
+            <div class="opt-item">(C) \(P(A) \cdot P(B)\)</div><div class="opt-item">(D) \(P(A) / P(B)\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (C)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">89. \(\vec{i} \cdot \vec{i} = \)</span>
+        <span class="q-eng">89. \(\vec{i} \cdot \vec{i} = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) 0</div><div class="opt-item">(B) 1</div>
+            <div class="opt-item">(C) \(\vec{j}\)</div><div class="opt-item">(D) \(\vec{k}\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (B)</div>
+    </div>
+
+
+    <div class="q-block">
         <span class="q-text">90. \(\vec{j} \times \vec{k} = \)</span>
         <div class="opt-grid">
             <div class="opt-item">(A) \(\vec{i}\)</div><div class="opt-item">(B) \(-\vec{i}\)</div>
         </div>
         <div class="correct-ans">सही विकल्प: (A)</div>
     </div>
+    
 
     <div class="q-block">
-        <span class="q-text">100. \(\vec{j} \cdot \vec{j} = \)</span>
+        <span class="q-text">91. मूल बिंदु से तल \(2x - 3y + 4z = 6\) की दूरी है :</span>
+        <span class="q-eng">91. The distance of the plane \(2x - 3y + 4z = 6\) from the origin is :</span>
         <div class="opt-grid">
-            <div class="opt-item">(A) 1</div><div class="opt-item">(B) 0</div>
+            <div class="opt-item">(A) \(6/\sqrt{29}\)</div><div class="opt-item">(B) \(2/\sqrt{29}\)</div>
+            <div class="opt-item">(C) \(3/\sqrt{29}\)</div><div class="opt-item">(D) \(5/\sqrt{29}\)</div>
         </div>
         <div class="correct-ans">सही विकल्प: (A)</div>
     </div>
+
+    <div class="q-block">
+        <span class="q-text">92. रेखाओं \(\frac{x-2}{1} = \frac{y-3}{-2} = \frac{z+5}{4}\) और \(\frac{x-1}{1} = \frac{y-2}{1} = \frac{z+3}{1}\) के बीच का कोण है :</span>
+        <span class="q-eng">92. Angle between the lines is :</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(90^\circ\)</div><div class="opt-item">(B) \(45^\circ\)</div>
+            <div class="opt-item">(C) \(0^\circ\)</div><div class="opt-item">(D) \(60^\circ\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">93. \((2\vec{i} - 3\vec{j} + 4\vec{k}) \cdot (\vec{i} + 2\vec{j} + \vec{k}) = \)</span>
+        <span class="q-eng">93. \((2\vec{i} - 3\vec{j} + 4\vec{k}) \cdot (\vec{i} + 2\vec{j} + \vec{k}) = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) 0</div><div class="opt-item">(B) 2</div>
+            <div class="opt-item">(C) 3</div><div class="opt-item">(D) 5</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">94. \(\vec{i} \times \vec{j} = \)</span>
+        <span class="q-eng">94. \(\vec{i} \times \vec{j} = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(\vec{k}\)</div><div class="opt-item">(B) \(-\vec{k}\)</div>
+            <div class="opt-item">(C) \(\vec{0}\)</div><div class="opt-item">(D) 1</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">95. \(P(A) + P(A') = \)</span>
+        <span class="q-eng">95. \(P(A) + P(A') = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) 0</div><div class="opt-item">(B) 1</div>
+            <div class="opt-item">(C) -1</div><div class="opt-item">(D) 0.5</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (B)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">96. \(\int \frac{dx}{x^2 - a^2} = \)</span>
+        <span class="q-eng">96. \(\int \frac{dx}{x^2 - a^2} = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(\frac{1}{2a} \log|\frac{x-a}{x+a}| + C\)</div>
+            <div class="opt-item">(B) \(\frac{1}{2a} \log|\frac{x+a}{x-a}| + C\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">97. \(\begin{vmatrix} 2 & 4 \\ 5 & 10 \end{vmatrix} = \)</span>
+        <span class="q-eng">97. \(\begin{vmatrix} 2 & 4 \\ 5 & 10 \end{vmatrix} = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) 0</div><div class="opt-item">(B) 20</div>
+            <div class="opt-item">(C) 40</div><div class="opt-item">(D) 10</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">98. \(\int \frac{dx}{x^2 + 16} = \)</span>
+        <span class="q-eng">98. \(\int \frac{dx}{x^2 + 16} = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) \(\frac{1}{4} \tan^{-1} \frac{x}{4} + C\)</div>
+            <div class="opt-item">(B) \(\tan^{-1} \frac{x}{4} + C\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">99. \(\int_0^{\pi/2} \sin x dx = \)</span>
+        <span class="q-eng">99. \(\int_0^{\pi/2} \sin x dx = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) 1</div><div class="opt-item">(B) 0</div>
+            <div class="opt-item">(C) -1</div><div class="opt-item">(D) \(\pi/2\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
+    <div class="q-block">
+        <span class="q-text">100. \(\vec{j} \cdot \vec{j} = \)</span>
+        <span class="q-eng">100. \(\vec{j} \cdot \vec{j} = \)</span>
+        <div class="opt-grid">
+            <div class="opt-item">(A) 1</div><div class="opt-item">(B) 0</div>
+            <div class="opt-item">(C) \(\vec{k}\)</div><div class="opt-item">(D) \(\vec{i}\)</div>
+        </div>
+        <div class="correct-ans">सही विकल्प: (A)</div>
+    </div>
+
 
         
     </div>
