--- a/4fe.html
+++ b/4fe.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BSEB Maths Set-E HD Answer Key</title>
+    <title>Bihar Board Exam 2026 List & All Subjects Answer Key | Manjit Sawasi</title>
+
+<meta name="description" content="Bihar Board Class 10th aur 12th ke sabhi subjects ki answer key, model paper aur exam list yahan dekhein. Manjit Sawasi Online portal for BSEB students.">
+
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     
