--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
  <link rel="stylesheet"
         href="style.css">
 
-        <title>MANJIT SAWASI (मंजीत सवासी )</title>
+        <title>) </title>
+        
+        <title>Manjit Sawasi MANJITSAWASI (मंजीत सवासी  | Bihar Board 12th List, Gaming, YouTube Editing & Education Portal</title>
+
+<meta name="description" content="Manjit Sawasi Online: Bihar Board 12th Answer Key, Gaming tips, YouTube video editing tutorials aur educational material ka sabse bada portal. Ek hi jagah payein sabhi viral updates.">
+
+        
             <link rel="icon" href="images/logo.jpeg" type="image/jpeg">
 
 
