--- a/2fe.html
+++ b/2fe.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
+  <title>Bihar Board 12th Exam 2026: All Subjects Answer Key & Question List | Manjit Sawasi</title>
+<meta name="description" content="Bihar Board Class 12th Exam 2026 ki sabhi subjects ki Answer Key, Viral Questions aur PDF download karein. Biology, Math, Physics, English aur Chemistry ki puri list yahan hai.">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -55,6 +58,35 @@
     </style>
 </head>
 <body>
+  
+  
+  <a href="index.html" style="
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    background: rgba(255, 255, 255, 0.8); /* Premier Glass Look */
+    backdrop-filter: blur(10px); /* Background halka dhundhla lagega */
+    -webkit-backdrop-filter: blur(10px);
+    color: #000;
+    text-decoration: none;
+    padding: 10px 18px;
+    border-radius: 12px; /* Apple Style Rounded Corners */
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15); /* Soft Shadow */
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: all 0.3s ease; /* Smooth hover effect */
+    z-index: 9999;
+    font-family: 'Segoe UI', Roboto, sans-serif;
+">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+    Home
+</a>
+
 
 <div class="container">
     <div class="main-header">
