--- a/index.html
+++ b/index.html
@@ -774,20 +774,20 @@ body {
 </div>
 
 
-<a href="3fe.html" class="big-btn">
-    Bihar Board 12th Physics Answer Key 2026 (100% Sahi Solution) date 4 jan 2026
+<a href="3fe.html" class="bio-btn">
+    Bihar Board 12th Physics Answer Key 2026 (100% Sahi Solution) date 4 Feb 2026
 </a>
 
-<a href="5fe.html" class="big-btn">
-    Bihar Board 12th English Answer Key 2026 (100% Sahi Solution) date 5 jan 2026
+<a href="5fe.html" class="bio-btn">
+    Bihar Board 12th English Answer Key 2026 (100% Sahi Solution) date 5 Feb 2026
 </a>
 
-<a href="6fe.html" class="big-btn">
-    Bihar Board 12th Chemistry  Answer Key 2026 (100% Sahi Solution) date 6 jan 2026
+<a href="6fe.html" class="bio-btn">
+    Bihar Board 12th Chemistry  Answer Key 2026 (100% Sahi Solution) date 6 Feb 2026
 </a>
 
 
-<a href="7fe.html" class="big-btn">
+<a href="7fe.html" class="bio-btn">
     Bihar Board 12th Hindi Answer Key 2026 (100% Sahi Solution) date 7 jan 2026
 </a>
 
